added helpdesk tickets

--- a/web/templates/layout/app.html.haml
+++ b/web/templates/layout/app.html.haml
@@ -23,9 +23,9 @@
         .collapse.navbar-collapse#navbar-collapse
           %ul.nav.navbar-nav
             %li.active
-              %a{href: "#"} Quality
+              %a{href: "qips"} Quality
             %li
-              %a{href: "#"} Helpdesk
+              %a{href: "tickets"} Helpdesk
 
     .container{role: "main"}
       = render @view_module, @view_template, assigns
