--- a/web/templates/layout/app.html.haml
+++ b/web/templates/layout/app.html.haml
@@ -19,7 +19,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand{href: "/} FastSite
+          %a.navbar-brand{href: "/"} FastSite
         .collapse.navbar-collapse#navbar-collapse
           %ul.nav.navbar-nav
             %li.active
