--- a/web/templates/layout/app.html.haml
+++ b/web/templates/layout/app.html.haml
@@ -19,13 +19,13 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand{href: "#"} FastSite
+          %a.navbar-brand{href: "/} FastSite
         .collapse.navbar-collapse#navbar-collapse
           %ul.nav.navbar-nav
             %li.active
-              %a{href: "qips"} Quality
+              %a{href: "/qips"} Quality
             %li
-              %a{href: "tickets"} Helpdesk
+              %a{href: "/tickets"} Helpdesk
 
     .container{role: "main"}
       = render @view_module, @view_template, assigns
